--- a/index.html
+++ b/index.html
@@ -15,85 +15,84 @@
 
 <body data-spy="scroll" data-target="#navbarResponsive">
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-	<h2 class="navbar-brand">komura's portfolio</h2>
-	<div class="collapse navbar-collapse" id="navbarResponsive">
-		<ul class="navbar-nav ml-auto">
-			<li class="nav-item">
-				<a href="#works" class="nav-link">Works</a>
-			</li>
-			<li class="nav-item">
-				<a href="#profile" class="nav-link">Profile</a>
-			</li>
-		</ul>
-	</div>
-</nav>
-
-<div id="works">
-	<div class="container-fluid">
-		<div class="row text-center">
-			<div class="col-12">
-				<h2>Works</h2>
-			</div>
-			<div class="col-12">
-				<p>RailsでInstagramのUIのような<br>Twitterクローンアプリケーション制作中</p>
-				<a href="#" class="btn btn-primary">もっと見る</a>
-			</div>
+	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+		<h2 class="navbar-brand">komura's portfolio</h2>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a href="#works" class="nav-link">Works</a>
+				</li>
+				<li class="nav-item">
+					<a href="#profile" class="nav-link">Profile</a>
+				</li>
+			</ul>
 		</div>
-		<hr class="my-4">
-	</div>
-</div>
+	</nav>
 
-<div id="profile">
-	<div class="container-fluid padding">
-		<div class="row text-center">
-			<div class="col-12">
-				<h2>Profile</h2>
+	<div id="works">
+		<div class="container-fluid">
+			<div class="row text-center">
+				<div class="col-12">
+					<h2>Works</h2>
+				</div>
+				<div class="col-12">
+					<p>RailsでInstagramのUIのような<br>Twitterクローンアプリケーション制作中</p>
+					<a href="#" class="btn btn-primary">もっと見る</a>
+				</div>
 			</div>
-			<div class="col-12 social">
-				<img src="img/self.jpg" alt="profile-img">
-				<p>インターネットと音楽が好きです</p>
-				<h4>SNS</h4>
-				<a href="#"><i class="fab fa-twitter"></i></a>
-				<a href="#"><i class="fab fa-github"></i></a>
-				<a href="#"><i class="fab fa-facebook"></i></a>
-			</div>
-			<div class="col-12">
-				<h4>Skills</h4>
-			</div>
-			<div class="col-4 col-sm">
-				<i class="fas fa-code"></i>
-				<p>HTML5</p>
-			</div>
-			<div class="col-4 col-sm">
-				<i class="fab fa-css3"></i>
-				<p>CSS3</p>
-			</div>
-			<div class="col-4 col-sm">
-				<i class="fas fa-bold"></i>
-				<p>Bootstrap4</p>
-			</div>
-			<div class="col-6 col-sm">
-				<i class="fas fa-gem"></i>
-				<p>Ruby</p>
-			</div>
-			<div class="col-6 col-sm">
-				<i class="fab fa-python"></i>
-				<p>Python</p>
-			</div>
+			<hr class="my-4">
 		</div>
 	</div>
-</div>
 
-<footer>
-	<div class="container-fluid padding">
-		<div class="row text-center">
-			<div class="col-12">
-				<h5>&copy; komura</h5>
+	<div id="profile">
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-12">
+					<h2>Profile</h2>
+				</div>
+				<div class="self col-12">
+					<img src="img/self.jpg" alt="profile-img">
+					<p>インターネットと音楽が好きです</p>
+				</div>
+				<div class="social col-12">
+					<a href="https://github.com/komura-c"><i class="fab fa-github"></i></a>
+				</div>
+				<div class="col-12">
+					<h4>Skills</h4>
+				</div>
+				<div class="col-4 col-sm">
+					<i class="fas fa-code"></i>
+					<p>HTML5</p>
+				</div>
+				<div class="col-4 col-sm">
+					<i class="fab fa-css3"></i>
+					<p>CSS3</p>
+				</div>
+				<div class="col-4 col-sm">
+					<i class="fas fa-bold"></i>
+					<p>Bootstrap4</p>
+				</div>
+				<div class="col-6 col-sm">
+					<i class="fas fa-gem"></i>
+					<p>Ruby</p>
+				</div>
+				<div class="col-6 col-sm">
+					<i class="fab fa-python"></i>
+					<p>Python</p>
+				</div>
 			</div>
 		</div>
 	</div>
-</footer>
+
+	<footer>
+		<div class="container-fluid padding">
+			<div class="row text-center">
+				<div class="col-12">
+					<h5>&copy; komura</h5>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 </body>
 
