--- a/index.html
+++ b/index.html
@@ -36,8 +36,25 @@
 					<h2>Works</h2>
 				</div>
 				<div class="col-12">
-					<p>RailsでInstagramのUIのような<br>Twitterクローンアプリケーション制作中</p>
-					<a href="#" class="btn btn-primary">もっと見る</a>
+					<h3>Twitgram</h3>
+					<img src="/img/twitgram.png" width="500px">
+				</div>
+				<div class="col-12">
+					<p>教材で作成したInstagramのクローンアプリケーション</p>
+					<p><strong>使用言語・ライブラリ</strong>：Ruby, Ruby on Rails, HTML, CSS, Bootstrap4</p>
+					<p><strong>機能</strong>：ログイン、投稿、コメント、いいね</p>
+					<p><strong>URL</strong>：<a href="https://twitgram0.herokuapp.com/">https://twitgram0.herokuapp.com/</a></p>
+				</div>
+				<div class="col-12">
+					<h3>グルメマッチャー</h3>
+					<img
+						src="https://user-images.githubusercontent.com/37304826/75558920-de99e800-5a85-11ea-8ec8-3338e0ce5ae1.png"
+						width="500px">
+					<p>APIの練習のための簡単なグルメ検索アプリケーション</p>
+					<p><strong>使用言語・ライブラリ</strong>：Ruby, Ruby on Rails, HTML, CSS, Bootstrap4</p>
+					<p><strong>機能</strong>：検索</p>
+					<p><strong>URL</strong>：<a
+							href="https://gourmet-matcher.herokuapp.com/">https://gourmet-matcher.herokuapp.com/</a></p>
 				</div>
 			</div>
 			<hr class="my-4">
