--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="col-12">
 					<h3>Twitgram</h3>
-					<img src="img/twitgram.png" width="500px">
+					<img src="img/twitgram.jpg" width="500px">
 				</div>
 				<div class="col-12">
 					<p>教材で作成したInstagramのクローンアプリケーション</p>
