--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="col-12">
 					<h3>Twitgram</h3>
-					<img src="img/twitgram.jpg" width="500px">
+					<img src="img/twitgram.jpg">
 				</div>
 				<div class="col-12">
 					<p>教材で作成したInstagramのクローンアプリケーション</p>
@@ -48,8 +48,7 @@
 				<div class="col-12">
 					<h3>グルメマッチャー</h3>
 					<img
-						src="https://user-images.githubusercontent.com/37304826/75558920-de99e800-5a85-11ea-8ec8-3338e0ce5ae1.png"
-						width="500px">
+						src="https://user-images.githubusercontent.com/37304826/75558920-de99e800-5a85-11ea-8ec8-3338e0ce5ae1.png">
 					<p>APIの練習のための簡単なグルメ検索アプリケーション</p>
 					<p><strong>使用言語・ライブラリ</strong>：Ruby, Ruby on Rails, HTML, CSS, Bootstrap4</p>
 					<p><strong>機能</strong>：検索</p>
