--- a/index.html
+++ b/index.html
@@ -3,113 +3,185 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>komura's portfolio</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500;700&display=swap">
+	<link rel="stylesheet" href="style.css">
 </head>
 
-<body data-spy="scroll" data-target="#navbarResponsive">
+<body>
+	<header class="fade fade__down">
+		<img src="./img/header.png" alt="ヘッダーピアノ画像">
+		<nav>
+			<h1>komura's portfolio</h1>
+			<a id="link1" href="#profile">Profile</a>
+			<a id="link2" href="#product">Product</a>
+			<a id="link3" href="#music">Music</a>
+			<a id="link4" href="#contact">Contact</a>
+		</nav>
+	</header>
 
-	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-		<h2 class="navbar-brand">komura's portfolio</h2>
-		<div class="collapse navbar-collapse" id="navbarResponsive">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item">
-					<a href="#works" class="nav-link">Works</a>
-				</li>
-				<li class="nav-item">
-					<a href="#profile" class="nav-link">Profile</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-
-	<div id="works">
-		<div class="container-fluid">
-			<div class="row text-center">
-				<div class="col-12">
-					<h2>Works</h2>
-				</div>
-				<div class="col-12">
-					<h3>Twitgram</h3>
-					<img src="img/twitgram.jpg">
-				</div>
-				<div class="col-12">
-					<p>教材で作成したInstagramのクローンアプリケーション</p>
-					<p><strong>使用言語・ライブラリ</strong>：Ruby, Ruby on Rails, HTML, CSS, Bootstrap4</p>
-					<p><strong>機能</strong>：ログイン、投稿、コメント、いいね</p>
-					<p><strong>URL</strong>：<a href="https://twitgram0.herokuapp.com/">https://twitgram0.herokuapp.com/</a></p>
-				</div>
-				<div class="col-12">
-					<h3>グルメマッチャー</h3>
-					<img
-						src="https://user-images.githubusercontent.com/37304826/75558920-de99e800-5a85-11ea-8ec8-3338e0ce5ae1.png">
-					<p>APIの練習のための簡単なグルメ検索アプリケーション</p>
-					<p><strong>使用言語・ライブラリ</strong>：Ruby, Ruby on Rails, HTML, CSS, Bootstrap4</p>
-					<p><strong>機能</strong>：検索</p>
-					<p><strong>URL</strong>：<a
-							href="https://gourmet-matcher.herokuapp.com/">https://gourmet-matcher.herokuapp.com/</a></p>
-				</div>
-			</div>
-			<hr class="my-4">
-		</div>
-	</div>
-
-	<div id="profile">
-		<div class="container-fluid padding">
-			<div class="row text-center">
-				<div class="col-12">
+	<main>
+		<div id="profile" class="fade fade__up">
+			<div class="container">
+				<div class="heading">
 					<h2>Profile</h2>
+					<h3>komura (Yuki Ishii)</h3>
 				</div>
-				<div class="self col-12">
-					<img src="img/self.jpg" alt="profile-img">
-					<p>インターネットと音楽が好きです</p>
-				</div>
-				<div class="social col-12">
-					<a href="https://github.com/komura-c"><i class="fab fa-github"></i></a>
-				</div>
-				<div class="col-12">
-					<h4>Skills</h4>
-				</div>
-				<div class="col-4 col-sm">
-					<i class="fas fa-code"></i>
-					<p>HTML5</p>
-				</div>
-				<div class="col-4 col-sm">
-					<i class="fab fa-css3"></i>
-					<p>CSS3</p>
-				</div>
-				<div class="col-4 col-sm">
-					<i class="fas fa-bold"></i>
-					<p>Bootstrap4</p>
-				</div>
-				<div class="col-6 col-sm">
-					<i class="fas fa-gem"></i>
-					<p>Ruby</p>
-				</div>
-				<div class="col-6 col-sm">
-					<i class="fab fa-python"></i>
-					<p>Python</p>
+				<div class="grid">
+					<div class="profile__left">
+						<img src="./img/self.jpg" alt="コムラのプロフィール画像">
+						<hr>
+						<div class="social">
+							<a href="https://twitter.com/komura_c"><i class="fab fa-twitter"></i></a>
+							<a href="https://github.com/komura-c"><i class="fab fa-github"></i></a>
+							<a href="https://qiita.com/komura_c">
+								<span class="fa-stack">
+									<i class="fa fa-square fa-stack-2x"></i>
+									<i class="fa fa-search fa-stack-1x fa-inverse fa-2x"></i>
+								</span>
+							</a>
+						</div>
+					</div>
+					<div class="profile__right">
+						<h3>自己紹介</h3>
+						<p>インターネットと音楽が好きです。<br>主にプログラミングと作曲(DTM)が趣味。<br>2019年春よりRuby on
+							Railsに触れ、<br>Webサービスを開発していきたいと思い、<br>現在、Webエンジニアを目指しています。</p>
+						<h3>よく使用する技術</h3>
+						<p>HTML, CSS, Bootstrap, Javascript<br>Ruby, Ruby on Rails, Python
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
+		<div id="product" class="fade fade__up">
+			<div class="container">
+				<div class="heading">
+					<h2>Product</h2>
+					<p>今まで私が作成したものです。<br>画像をクリックすると詳細が見れます。</p>
+				</div>
+				<div class="product__list">
+					<div class="production">
+						<label for="portfolio">
+							<img src="./img/portfolio.png" alt="Twitgram">
+						</label>
+						<input type="checkbox" id="portfolio" class="cssacc">
+						<div class="accshow">
+							<dl class="product-info">
+								<dt>名前：</dt>
+								<dd>ポートフォリオサイト</dd>
+								<dt>説明：</dt>
+								<dd>このサイトです。スクロールやアニメーションなどCSSとJavascriptに力を入れました。</dd>
+								<dt>技術：</dt>
+								<dd>HTML5, CSS3, Javascript</dd>
+								<dt>URL：</dt>
+								<dd><a href="https://komura-c.github.io/portfolio/">https://komura-c.github.io/portfolio/</a></dd>
+								<dt>コード：</dt>
+								<dd><a href="https://github.com/komura-c/portfolio">https://github.com/komura-c/portfolio</a></dd>
+							</dl>
+						</div>
+					</div>
+					<div class="production">
+						<label for="twitgram"><img src="./img/twitgram.jpg" alt="Twitgram"></label>
+						<input type="checkbox" id="twitgram" class="cssacc">
+						<div class="accshow">
+							<dl class="product-info">
+								<dt>名前：</dt>
+								<dd>Twitgram</dd>
+								<dt>説明：</dt>
+								<dd>インスタグラムのクローンアプリをTechpitの教材にて作成しました。Herokuにて画像を保存できるようにAWSのS3を使うなど独自にカスタマイズしています。</dd>
+								<dt>機能：</dt>
+								<dd>ユーザー登録、ログイン、投稿、投稿へのコメント、いいねなど</dd>
+								<dt>技術：</dt>
+								<dd>Ruby, Ruby on Rails, HTML, CSS, Bootstrap, Javascript</dd>
+								<dt>URL：</dt>
+								<dd><a href="https://twitgram0.herokuapp.com/">https://twitgram0.herokuapp.com/</a></dd>
+								<dt>コード：</dt>
+								<dd><a href="https://github.com/komura-c/twitgram">https://github.com/komura-c/twitgram</a></dd>
+							</dl>
+						</div>
+					</div>
+					<div class="production">
+						<label for="gourmet"><img src="./img/gourmet-matcher.png" alt="Gourmet-matcher"></label>
+						<input type="checkbox" id="gourmet" class="cssacc">
+						<div class="accshow">
+							<dl class="product-info">
+								<dt>名前：</dt>
+								<dd>グルメマッチャー</dd>
+								<dt>説明：</dt>
+								<dd>簡単な飲食店検索アプリ。ホットペッパーのAPIを使用してみたくて作りました。
+								</dd>
+								<dt>機能：</dt>
+								<dd>検索</dd>
+								<dt>技術：</dt>
+								<dd>Ruby, Ruby on Rails, HTML, CSS, Bootstrap</dd>
+								<dt>URL：</dt>
+								<dd><a href="https://gourmet-matcher.herokuapp.com/">https://gourmet-matcher.herokuapp.com/</a></dd>
+								<dt>コード：</dt>
+								<dd><a
+										href="https://github.com/komura-c/gourmet-matcher">https://github.com/komura-c/gourmet-matcher</a>
+								</dd>
+							</dl>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div id="music" class="fade fade__up">
+			<div class="container">
+				<div class="heading">
+					<h2>Music</h2>
+					<p>今まで私が作曲したものです。<br>▷をクリックすると音楽が流れます。<br>※音量にご注意ください。</p>
+				</div>
+				<div class="music__list">
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995476&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+					<p>その他の曲は、<span><a href="https://soundcloud.com/komura_c" class="soundcloud">Soundcloud</a></span>で聴くことができます。
+					</p>
+				</div>
+			</div>
+		</div>
+		<div id="contact" class="fade fade__up">
+			<div class="container">
+				<div class="heading">
+					<h2>Contact</h2>
+					<p>何かありましたら、<br>メール、TwitterのDMにて、<br>お気軽にご連絡ください。</p>
+				</div>
+				<div class="contact__list">
+					<a>メール:</a><input type="text" class="my-email" value="ut0p1a.c.jp@gmail.com" readonly="readonly">
+					<br><a>または</a>
+					<br><a>Twitter:</a><span><a href="https://twitter.com/komura_c" class="twitter">@komura_c</a></span>
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<div class="bg-css">
+		<ul class="music-notes">
+			<li>&#9835;</li>
+			<li>&#9833;</li>
+			<li>&#9834;</li>
+			<li>&#9833;</li>
+			<li>&#9834;</li>
+			<li>&#9835;</li>
+			<li>&#9833;</li>
+			<li>&#9834;</li>
+			<li>&#9835;</li>
+			<li>&#9833;</li>
+		</ul>
 	</div>
 
 	<footer>
-		<div class="container-fluid padding">
-			<div class="row text-center">
-				<div class="col-12">
-					<h5>&copy; komura</h5>
-				</div>
-			</div>
-		</div>
+		<h3>Copyright &copy; komura</h3>
 	</footer>
 
+	<script type="text/javascript" src="script.js" defer></script>
 </body>
 
 </html>
