fix profile responsive

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<title>komura's portfolio</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500;700&display=swap">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
 		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500;700&display=swap">
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -50,7 +50,7 @@
 						<p>インターネットと音楽が好きです。<br>主にプログラミングと作曲(DTM)が趣味。<br>2019年春よりRuby on
 							Railsに触れ、<br>Webサービスを開発していきたいと思い、<br>現在、Webエンジニアを目指しています。</p>
 						<h3>よく使用する技術</h3>
-						<p>HTML, CSS, Bootstrap, Javascript<br>Ruby, Ruby on Rails, Python
+						<p>HTML, CSS, Bootstrap, Javascript,<br>Ruby, Ruby on Rails, Python
 						</p>
 					</div>
 				</div>
