--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="grid">
 					<div class="profile__left">
-						<img src="./img/self.jpg" alt="コムラのプロフィール画像">
+						<img src="./img/self.png" alt="コムラのプロフィール画像">
 						<hr>
 						<div class="social">
 							<a href="https://twitter.com/komura_c"><i class="fab fa-twitter"></i></a>
@@ -84,7 +84,7 @@
 						</div>
 					</div>
 					<div class="production">
-						<label for="twitgram"><img src="./img/twitgram.jpg" alt="Twitgram"></label>
+						<label for="twitgram"><img src="./img/twitgram.png" alt="Twitgram"></label>
 						<input type="checkbox" id="twitgram" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
