--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<img src="./img/header.png" alt="ヘッダーピアノ画像">
 		<nav>
 			<h1>komura's portfolio</h1>
-			<a id="link1" href="#profile">Profile</a>
-			<a id="link2" href="#product">Product</a>
-			<a id="link3" href="#music">Music</a>
-			<a id="link4" href="#contact">Contact</a>
+			<a href="#profile" onclick="return LinkClick('profile');">Profile</a>
+			<a href="#product" onclick="return LinkClick('product');">Product</a>
+			<a href="#music" onclick="return LinkClick('music');">Music</a>
+			<a href="#contact" onclick="return LinkClick('contact');">Contact</a>
 		</nav>
 	</header>
 
