--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta charset="utf-8">
 	<title>komura's portfolio</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500;700&display=swap">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
-		integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&display=swap">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header class="fade fade__down">
-		<img src="./img/header.png" alt="ヘッダーピアノ画像">
+		<img src="./img/header.png" alt="ヘッダーピアノ画像" decoding="async">
 		<nav>
 			<h1>komura's portfolio</h1>
 			<a href="#profile" onclick="return LinkClick('profile');">Profile</a>
@@ -32,12 +31,12 @@
 				</div>
 				<div class="grid">
 					<div class="profile__left">
-						<img src="./img/self.png" alt="コムラのプロフィール画像">
+						<img src="./img/self.png" alt="コムラのプロフィール画像" decoding="async">
 						<hr>
 						<div class="social">
-							<a href="https://twitter.com/komura_c"><i class="fab fa-twitter"></i></a>
-							<a href="https://github.com/komura-c"><i class="fab fa-github"></i></a>
-							<a href="https://qiita.com/komura_c">
+							<a href="https://twitter.com/komura_c/"><i class="fab fa-twitter"></i></a>
+							<a href="https://github.com/komura-c/"><i class="fab fa-github"></i></a>
+							<a href="https://qiita.com/komura_c/">
 								<span class="fa-stack">
 									<i class="fa fa-square fa-stack-2x"></i>
 									<i class="fa fa-search fa-stack-1x fa-inverse fa-2x"></i>
@@ -65,7 +64,7 @@
 				<div class="product__list">
 					<div class="production">
 						<label for="portfolio">
-							<img src="./img/portfolio.png" alt="Twitgram">
+							<img src="./img/portfolio.png" alt="Portfolio" decoding="async">
 						</label>
 						<input type="checkbox" id="portfolio" class="cssacc">
 						<div class="accshow">
@@ -79,12 +78,12 @@
 								<dt>URL：</dt>
 								<dd><a href="https://komura-c.github.io/portfolio/">https://komura-c.github.io/portfolio/</a></dd>
 								<dt>コード：</dt>
-								<dd><a href="https://github.com/komura-c/portfolio">https://github.com/komura-c/portfolio</a></dd>
+								<dd><a href="https://github.com/komura-c/portfolio/">https://github.com/komura-c/portfolio/</a></dd>
 							</dl>
 						</div>
 					</div>
 					<div class="production">
-						<label for="twitgram"><img src="./img/twitgram.png" alt="Twitgram"></label>
+						<label for="twitgram"><img src="./img/twitgram.png" alt="Twitgram" decoding="async"></label>
 						<input type="checkbox" id="twitgram" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
@@ -99,12 +98,12 @@
 								<dt>URL：</dt>
 								<dd><a href="https://twitgram0.herokuapp.com/">https://twitgram0.herokuapp.com/</a></dd>
 								<dt>コード：</dt>
-								<dd><a href="https://github.com/komura-c/twitgram">https://github.com/komura-c/twitgram</a></dd>
+								<dd><a href="https://github.com/komura-c/twitgram/">https://github.com/komura-c/twitgram/</a></dd>
 							</dl>
 						</div>
 					</div>
 					<div class="production">
-						<label for="gourmet"><img src="./img/gourmet-matcher.png" alt="Gourmet-matcher"></label>
+						<label for="gourmet"><img src="./img/gourmet-matcher.png" alt="Gourmet-matcher" decoding="async"></label>
 						<input type="checkbox" id="gourmet" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
@@ -121,7 +120,7 @@
 								<dd><a href="https://gourmet-matcher.herokuapp.com/">https://gourmet-matcher.herokuapp.com/</a></dd>
 								<dt>コード：</dt>
 								<dd><a
-										href="https://github.com/komura-c/gourmet-matcher">https://github.com/komura-c/gourmet-matcher</a>
+										href="https://github.com/komura-c/gourmet-matcher/">https://github.com/komura-c/gourmet-matcher/</a>
 								</dd>
 							</dl>
 						</div>
@@ -136,12 +135,7 @@
 					<p>今まで私が作曲したものです。<br>▷をクリックすると音楽が流れます。<br>※音量にご注意ください。</p>
 				</div>
 				<div class="music__list">
-					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995476&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
-					<iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
-						src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+					<div id="soundcloud__box"></div>
 					<p>その他の曲は、<span><a href="https://soundcloud.com/komura_c" class="soundcloud">Soundcloud</a></span>で聴くことができます。
 					</p>
 				</div>
