--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 	<meta charset="utf-8">
 	<title>komura's portfolio</title>
 	<meta name="viewport" content="width=device-width,user-scalable=no,maximum-scale=1">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@500&display=swap">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap">
 	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<header class="fade fade__down">
-		<img src="./img/header.png" alt="ヘッダーピアノ画像" decoding="async">
+		<img data-src="./img/header.png" alt="ヘッダーピアノ画像">
 		<nav>
 			<h1>komura's portfolio</h1>
 			<a href="#profile" onclick="return LinkClick('profile');">Profile</a>
@@ -31,7 +30,7 @@
 				</div>
 				<div class="grid">
 					<div class="profile__left">
-						<img src="./img/self.png" alt="コムラのプロフィール画像" decoding="async">
+						<img data-src="./img/self.png" alt="コムラのプロフィール画像">
 						<hr>
 						<div class="social">
 							<a href="https://twitter.com/komura_c/"><i class="fab fa-twitter"></i></a>
@@ -64,7 +63,7 @@
 				<div class="product__list">
 					<div class="production">
 						<label for="portfolio">
-							<img src="./img/portfolio.png" alt="Portfolio" decoding="async">
+							<img data-src="./img/portfolio.png" alt="Portfolio">
 						</label>
 						<input type="checkbox" id="portfolio" class="cssacc">
 						<div class="accshow">
@@ -83,7 +82,7 @@
 						</div>
 					</div>
 					<div class="production">
-						<label for="twitgram"><img src="./img/twitgram.png" alt="Twitgram" decoding="async"></label>
+						<label for="twitgram"><img data-src="./img/twitgram.png" alt="Twitgram"></label>
 						<input type="checkbox" id="twitgram" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
@@ -103,7 +102,8 @@
 						</div>
 					</div>
 					<div class="production">
-						<label for="gourmet"><img src="./img/gourmet-matcher.png" alt="Gourmet-matcher" decoding="async"></label>
+						<label for="gourmet"><img data-src="./img/gourmet-matcher.png" alt="Gourmet-matcher"
+								decoding="async"></label>
 						<input type="checkbox" id="gourmet" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
@@ -176,6 +176,8 @@
 	</footer>
 
 	<script type="text/javascript" src="script.js" defer></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.1/js/all.min.js"
+		defer></script>
 </body>
 
 </html>
