--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<header class="fade fade__down">
-		<img src="./img/header.png" alt="ヘッダーピアノ画像" decoding="async">
+		<img src="./img/header.jpeg" alt="ヘッダーピアノ画像" decoding="async">
 		<nav>
 			<h1>komura's portfolio</h1>
 			<a href="#profile" onclick="return LinkClick('profile');">Profile</a>
@@ -30,7 +30,7 @@
 				</div>
 				<div class="grid">
 					<div class="profile__left">
-						<img src="./img/self.png" alt="コムラのプロフィール画像" decoding="async">
+						<img src="./img/self.jpeg" alt="コムラのプロフィール画像" decoding="async">
 						<hr>
 						<div class="social">
 							<a href="https://twitter.com/komura_c/"><i class="fab fa-twitter"></i></a>
@@ -63,7 +63,7 @@
 				<div id="product__lazy" class="product__list">
 					<div class="production">
 						<label for="portfolio">
-							<img src="./img/portfolio.png" alt="Portfolio" decoding="async">
+							<img src="./img/portfolio.jpeg" alt="Portfolio" decoding="async">
 						</label>
 						<input type="checkbox" id="portfolio" class="cssacc">
 						<div class="accshow">
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 					<div class="production">
-						<label for="twitgram"><img src="./img/twitgram.png" alt="Twitgram" decoding="async"></label>
+						<label for="twitgram"><img src="./img/twitgram.jpeg" alt="Twitgram" decoding="async"></label>
 						<input type="checkbox" id="twitgram" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
@@ -102,7 +102,7 @@
 						</div>
 					</div>
 					<div class="production">
-						<label for="gourmet"><img src="./img/gourmet-matcher.png" alt="Gourmet-matcher" decoding="async"></label>
+						<label for="gourmet"><img src="./img/gourmet-matcher.jpeg" alt="Gourmet-matcher" decoding="async"></label>
 						<input type="checkbox" id="gourmet" class="cssacc">
 						<div class="accshow">
 							<dl class="product-info">
