update css flex

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h2>Profile</h2>
           <h3>komura (Yuki Ishii)</h3>
         </div>
-        <div class="grid">
+        <div class="flex">
           <div class="profile__left">
             <img src="./img/self.jpeg" alt="コムラのプロフィール画像" decoding="async">
             <hr>
