--- a/index.html
+++ b/index.html
@@ -134,7 +134,16 @@
           <p>今まで私が作曲したものです。<br>▷をクリックすると音楽が流れます。<br>※音量にご注意ください。</p>
         </div>
         <div class="music__list">
-          <div id="soundcloud__box"></div>
+          <div id="soundcloud__box">
+            <object
+              data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
+              width="200" height="200">
+            </object>
+            <object
+              data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
+              width="200" height="200">
+            </object>
+          </div>
           <p>その他の曲は、<span><a href="https://soundcloud.com/komura_c" class="soundcloud">Soundcloud</a></span>で聴くことができます。
           </p>
         </div>
