--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           </div>
         </div>
       </div>
-      <div id="works" class="js-fade">
+      <div id="works">
         <div class="container">
           <div class="heading">
             <h2 class="heading__title">Works</h2>
@@ -125,7 +125,7 @@
           </div>
         </div>
       </div>
-      <div id="music" class="js-fade">
+      <div id="music">
         <div class="container">
           <div class="heading">
             <h2 class="heading__title">Music</h2>
@@ -141,13 +141,6 @@
               class="music__content"
             >
             </object>
-            <object
-              data="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/436888101&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
-              width="100%"
-              height="200"
-              class="music__content"
-            >
-            </object>
             <p class="music__text">
               その他の曲は、
               <a href="https://soundcloud.com/komura_c" class="music__button"
@@ -158,7 +151,7 @@
           </div>
         </div>
       </div>
-      <div id="contact" class="js-fade">
+      <div id="contact">
         <div class="container">
           <div class="heading">
             <h2 class="heading__title">Contact</h2>
