--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
               class="music__content"
               loading="lazy"
               width="100%"
-              height="166"
-              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"
+              height="200"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/524995878&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=false&visual=true"
             ></iframe>
             <p class="music__text">
               その他の曲は、
@@ -172,6 +172,11 @@
     <footer class="footer">
       <h3 class="footer__copyright">Copyright &copy; komura</h3>
     </footer>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-3.5.1.min.js"
+      defer
+    ></script>
     <script type="text/javascript" src="script.js" defer></script>
   </body>
 </html>
